# LaserDiodeDriver

./: .gitmodules  Arduino.cpp  Arduino.h  CMakeLists.txt  DummyBoard.cpp  DummyBoard.h  InterfaceBoard.h  K8061.cpp  K8061.h  LICENSE  LaserDiodeDriver.cpp  LaserDiodeDriver.h  README.md
.github/workflows/: automatic_release.yml  linux_build.yml  linux_build_and_release.yml  windows_build.yml
arduino_sketches/: Program.ino
arduino_sketches/Program/: Program.ino
arduino_sketches/Program/include/: SoftI2cMaster.h  TwoWireBase.h
arduino_sketches/Setup/: Setup.ino
arduino_sketches/Setup/include/: SoftI2cMaster.h
default config/: 6channel_01102022.cfg  LaserEngine_v3_30082021.cfg
media/fritzings/: arduino_breadboard.fzz
